Package_Tools/include-C/box2d/fertig/box2d.h

/// Is the wheel joint limit enabled?
extern bool b2WheelJoint_IsLimitEnabled( b2JointId jointId );
/// Get the wheel joint lower limit
extern float b2WheelJoint_GetLowerLimit( b2JointId jointId );
/// Get the wheel joint upper limit
extern float b2WheelJoint_GetUpperLimit( b2JointId jointId );
/// Set the wheel joint limits
extern void b2WheelJoint_SetLimits( b2JointId jointId, float lower, float upper );
/// Enable/disable the wheel joint motor
extern void b2WheelJoint_EnableMotor( b2JointId jointId, bool enableMotor );
/// Is the wheel joint motor enabled?
extern bool b2WheelJoint_IsMotorEnabled( b2JointId jointId );
/// Set the wheel joint motor speed in radians per second
extern void b2WheelJoint_SetMotorSpeed( b2JointId jointId, float motorSpeed );
/// Get the wheel joint motor speed in radians per second
extern float b2WheelJoint_GetMotorSpeed( b2JointId jointId );
/// Set the wheel joint maximum motor torque, usually in newton-meters
extern void b2WheelJoint_SetMaxMotorTorque( b2JointId jointId, float torque );
/// Get the wheel joint maximum motor torque, usually in newton-meters
extern float b2WheelJoint_GetMaxMotorTorque( b2JointId jointId );
/// Get the wheel joint current motor torque, usually in newton-meters
extern float b2WheelJoint_GetMotorTorque( b2JointId jointId );
/**@}*/

/**@}*/

/**
 * @defgroup contact Contact
 * Access to contacts
 * @{
 */

/// Contact identifier validation. Provides validation for up to 2^32 allocations.
extern bool b2Contact_IsValid( b2ContactId id );
/// Get the data for a contact. The manifold may have no points if the contact is not touching.
extern b2ContactData b2Contact_GetData( b2ContactId contactId );