Package_Tools/include-C/box2d/fertig/box2d.pp

{/ Is the wheel joint limit enabled? }
function b2WheelJoint_IsLimitEnabled(jointId:Tb2JointId):Tbool;cdecl;external;
{/ Get the wheel joint lower limit }
function b2WheelJoint_GetLowerLimit(jointId:Tb2JointId):single;cdecl;external;
{/ Get the wheel joint upper limit }
function b2WheelJoint_GetUpperLimit(jointId:Tb2JointId):single;cdecl;external;
{/ Set the wheel joint limits }
procedure b2WheelJoint_SetLimits(jointId:Tb2JointId; lower:single; upper:single);cdecl;external;
{/ Enable/disable the wheel joint motor }
procedure b2WheelJoint_EnableMotor(jointId:Tb2JointId; enableMotor:Tbool);cdecl;external;
{/ Is the wheel joint motor enabled? }
function b2WheelJoint_IsMotorEnabled(jointId:Tb2JointId):Tbool;cdecl;external;
{/ Set the wheel joint motor speed in radians per second }
procedure b2WheelJoint_SetMotorSpeed(jointId:Tb2JointId; motorSpeed:single);cdecl;external;
{/ Get the wheel joint motor speed in radians per second }
function b2WheelJoint_GetMotorSpeed(jointId:Tb2JointId):single;cdecl;external;
{/ Set the wheel joint maximum motor torque, usually in newton-meters }
procedure b2WheelJoint_SetMaxMotorTorque(jointId:Tb2JointId; torque:single);cdecl;external;
{/ Get the wheel joint maximum motor torque, usually in newton-meters }
function b2WheelJoint_GetMaxMotorTorque(jointId:Tb2JointId):single;cdecl;external;
{/ Get the wheel joint current motor torque, usually in newton-meters }
function b2WheelJoint_GetMotorTorque(jointId:Tb2JointId):single;cdecl;external;
{*@ }
{*@ }
{*
 * @defgroup contact Contact
 * Access to contacts
 * @
  }
{/ Contact identifier validation. Provides validation for up to 2^32 allocations. }
function b2Contact_IsValid(id:Tb2ContactId):Tbool;cdecl;external;
{/ Get the data for a contact. The manifold may have no points if the contact is not touching. }
function b2Contact_GetData(contactId:Tb2ContactId):Tb2ContactData;cdecl;external;
{*@ }

implementation


end.
